// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test.cts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
await(1);

=====================================output=====================================
await(1);

================================================================================
`;

exports[`test.mts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
await(1);

=====================================output=====================================
await 1;

================================================================================
`;

exports[`test.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
await(1);

=====================================output=====================================
await 1;

================================================================================
`;

exports[`test.tsx format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
await(1);

=====================================output=====================================
await 1;

================================================================================
`;
